2.1.0/_sources/gallery/userdemo/demo_gridspec02.rst.txt


.. _sphx_glr_gallery_userdemo_demo_gridspec02.py:


===============
Demo Gridspec02
===============





.. image:: /gallery/userdemo/images/sphx_glr_demo_gridspec02_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    from matplotlib.gridspec import GridSpec


    def make_ticklabels_invisible(fig):
        for i, ax in enumerate(fig.axes):
            ax.text(0.5, 0.5, "ax%d" % (i+1), va="center", ha="center")
            ax.tick_params(labelbottom=False, labelleft=False)


    fig = plt.figure()

    gs = GridSpec(3, 3)
    ax1 = plt.subplot(gs[0, :])
    # identical to ax1 = plt.subplot(gs.new_subplotspec((0, 0), colspan=3))
    ax2 = plt.subplot(gs[1, :-1])
    ax3 = plt.subplot(gs[1:, -1])
    ax4 = plt.subplot(gs[-1, 0])
    ax5 = plt.subplot(gs[-1, -2])

    fig.suptitle("GridSpec")
    make_ticklabels_invisible(fig)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.167 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: demo_gridspec02.py <demo_gridspec02.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: demo_gridspec02.ipynb <demo_gridspec02.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
